Just plaing about with date formats and layouts

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,38 @@
 en:
   date:
     formats:
-      default: "%d-%m-%Y"
+      default: "%Y-%m-%d"
+      short: "%b %d"
+      long: "%B %d, %Y"
+      day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
+      abbr_day_names: [Sun, Mon, Tue, Wed, Thu, Fri, Sat]
+      # Don't forget the nil at the beginning; there's no such thing as a 0th month
+      month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]
+      abbr_month_names: [~, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec]
+      # Used in date_select and datetime_select.
+      order:
+      - :year
+      - :month
+      - :day
+
+      time:    
+      formats:
+      default: "%a, %d %b %Y %H:%M:%S %z"
+      short: "%d %b %H:%M"
+      long: "%B %d, %Y %H:%M"
+      am: "am"
+      pm: "pm"
+
+  number:
+    format:
+      precision: 2
+      separator: "."
+      delimiter: ","
+  currency:
+    format:
+      unit: "$$"
+      precision: 2
+      format: "%n %u"
         
   global:
     program_name: "MyIT CRM"
@@ -32,6 +63,8 @@ en:
     user_type: "User Type"
     welcome: "Welcome"
     register: "Register"
+    last_updated_by: "Last updated by:"
+    status: "Status"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
