Still getting the permission worked out for internal staff. eg tech's should be only able to view other employees details and not be able to edit them

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
     register: "Register"
     last_updated_by: "Last updated by:"
     status: "Status"
+    roles_mask: "Role Mask"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
