--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,8 @@ en:
     last_updated_by: "Last updated by:"
     status: "Status"
     roles_mask: "Role Mask"
+    cancel: "Cancel"
+    dashboard: "Dashboard"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
