--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -41,6 +41,9 @@ en_AU:
     ago: "ago"
     from: "from"
     by: "by"
+    or: "or"
+    confirm: "Confirm"
+    actions: "Actions"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -51,7 +54,7 @@ en_AU:
    address: "Address"
    state: "State"
    city: "City"
-   zip: "Postcode/Zip"
+   zip: "Postcode"
    phone: "Phone"
    fax: "Fax"
    email: "Email"
@@ -166,7 +169,7 @@ en_AU:
         # These three are to override number.format and are optional
         # separator:
         delimiter: ""
-        # precision:
+        precision: 1
 
     # Used in number_to_precision()
     precision:
@@ -273,3 +276,11 @@ en_AU:
     select:
       # default value for :prompt => true in FormOptionsHelper
       prompt: "Please select"
+  parts:
+    t_title: "Parts/Software List"
+    t_add_new_part: "Add New Part"
+    description: "Description"
+    model: "Model"
+    cost: "Purchase Price"
+    sell_price: "Selling Price"
+    supplier: "Supplier"
