Added new image. CSS changes and some layout testing

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -44,6 +44,7 @@ en_AU:
     or: "or"
     confirm: "Confirm"
     actions: "Actions"
+    close: "Close"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
