Fixed some I18n labels. Added Admin section for Business information setup. Getting tabs and formtastic together to create these pages.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -46,6 +46,9 @@ en_AU:
     actions: "Actions"
     close: "Close"
     my_details: "Edit My Profile"
+    days: "Day(s)"
+    months: "Month(s)"
+    years: "Year(s)"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -309,6 +312,14 @@ en_AU:
     available: "Avail."
     ordered: "Ordered"
     search: "Search"
+    stocked: "Enable this if stock needs to be in controlled"
+    tab_menu_basic: "Basic (required)"
+    tab_menu_basic_name: "Basic"
+    tab_menu_inventory_name: "Inventory"
+    tab_menu_selling_name: "Selling_Information"
+    tab_menu_selling: "Selling Information"
+    tab_menu_warranty_name: "Warranty_Information"
+    tab_menu_warranty: "Warranty Information"
   product_cat:
     t_new_category: "New Product Category"
     t_create_new_category: "Create New Product Category"
