Added new images, cleaned up a few more form fields, added i18n names to fields, etc

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -333,8 +333,34 @@ en_AU:
       payment_options: "Payment Options"
       billing_information: "Billing Information"
       billing_information_url: "Billing_Information"
+      localisation_url: "Localisation"
     hint:
       business_number: "eg: ACN, ABN, etc"
       transaction_fee: "eg: 3% of total invoice amount"
       tax_format: "eg:To include 10% on your invoices, enter 10"
       tax_type: "eg: GST, VAT, Sales, etc"
+    field_title:
+      business_name: "Business Name"
+      business_slogan: "Business Slogan"
+      business_number: "Buisness Number"
+      primary_email: "Primary Email"
+      phone: "Phone Number"
+      fax: "Fax Number"
+      primary_address: "Address"
+      primary_city: "City"
+      primary_state: "State"
+      primary_zip: "Postcode"
+      enable_tax: "Enable Tax"
+      tax_rate: "Tax rate %"
+      tax_type: "Tax Type"
+      business_contact_name: "Head Office Contact Name"
+      business_contact_phone: "Head Office Contact Number"
+      business_contact_email: "Head Office Contact Email"
+      billing_address: "Head Office Address"
+      billing_city: "Head Office City"
+      billing_zip: "Head Office Postcode"
+      billing_state: "Head Office State"
+      billing_phone: "Head Office Phone"
+      billing_fax: "Head Office Fax"
+      paymate: "Paymate"
+      direct_deposit: "Direct Deposit"
