Supplier was not updating because of parts leadtime not being filled in and it was a required field. Now working.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -50,6 +50,7 @@ en_AU:
     months: "Month(s)"
     years: "Year(s)"
     administration: "Administration"
+    error: "Please re-check your information before proceeding"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
