--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -51,6 +51,7 @@ en_AU:
     years: "Year(s)"
     administration: "Administration"
     error: "Please re-check your information before proceeding"
+    description: "Description"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -326,6 +327,12 @@ en_AU:
     tab_menu_selling: "Selling Information"
     tab_menu_warranty_name: "Warranty_Information"
     tab_menu_warranty: "Warranty Information"
+    our_sku: "Our SKU#"
+    category: "Product Category"
+    supplier: "Supplier Name"
+    supplier_sku: "Supplier SKU#"
+    cost_price: "Cost Price"
+    sell_price: "Selling Price"
   product_cat:
     t_new_category: "New Product Category"
     t_create_new_category: "Create New Product Category"
@@ -370,3 +377,5 @@ en_AU:
       paymate: "Paymate"
       direct_deposit: "Direct Deposit"
   user_t_edit_profile: "Edit My Profile"
+  producst:
+    model: "Model#"
