Added ability to add new product from suppliers list. removed attachment_fu and will replace to paperclip for file attachment gem. Added new delet icon and numerous other little things

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -53,6 +53,7 @@ en_AU:
     error: "Please re-check your information before proceeding"
     description: "Description"
     expired_session: "Your session has expired. Please log back in."
+    apply: "Apply"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -315,7 +316,7 @@ en_AU:
     allocated: "Allocated"
     available: "Avail."
     ordered: "Ordered"
-    search: "Search"
+    search: "Search Description for "
     stocked: "Enable this if stock needs to be in controlled"
     tab_menu_basic: "Basic (required)"
     tab_menu_basic_name: "Basic"
@@ -325,8 +326,8 @@ en_AU:
     tab_menu_warranty_name: "Warranty_Information"
     tab_menu_warranty: "Warranty Information"
     our_sku: "Our SKU#"
-    category: "Product Category"
-    supplier: "Supplier Name"
+    category: "Category"
+    supplier: "Supplier"
     supplier_sku: "Supplier SKU#"
     cost_price: "Purchase/Cost Price"
     sell_price: "Selling Price"
