Chnaged some things around. Working on Associations between users and worksorders.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -446,3 +446,4 @@ en_AU:
     priority: "Priority"
     tab_menu_resolution: "Resolution"
     resolution: "Resolution Details"
+    t_add_new: "Add New"
