Changed some MORE things around. Added some new images and adjusted layouts abit. Added a back button to all pages for easier navigation. Changed DB structure to take usernames instead of user_id's in WO table.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -56,6 +56,7 @@ en_AU:
     description: "Description"
     expired_session: "Your session has expired. Please log back in."
     apply: "Apply"
+    workorder: "Create Work Order"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
@@ -447,3 +448,4 @@ en_AU:
     tab_menu_resolution: "Resolution"
     resolution: "Resolution Details"
     t_add_new: "Add New"
+    status: "Status"
