Chnaged the Settings(Admin) section around to now have gloabally assigned "Setting". Also heaps of other little things like dynamic page titles and stuff

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -106,7 +106,7 @@ en_AU:
      logout_success: "Successfully Logged out."
      t_title: "Users"
      user_t_edit_user: "Editing User Profile"
-     t_view: "User Details"
+     t_view: "Users Details"
      t_delete_user: "Delete User"
      flash_delete_user: "Successfully Deleted User"
      number: "Account Number"
@@ -403,31 +403,7 @@ en_AU:
       transaction_fee: "eg: 3% of total invoice amount"
       tax_format: "eg:To include 10% on your invoices, enter 10"
       tax_type: "eg: GST, VAT, Sales, etc"
-    field_title:
-      business_name: "Business Name"
-      business_slogan: "Business Slogan"
-      business_number: "Buisness Number"
-      primary_email: "Primary Email"
-      phone: "Phone Number"
-      fax: "Fax Number"
-      primary_address: "Address"
-      primary_city: "City"
-      primary_state: "State"
-      primary_zip: "Postcode"
-      enable_tax: "Enable Tax"
-      tax_rate: "Tax rate %"
-      tax_type: "Tax Type"
-      business_contact_name: "Head Office Contact Name"
-      business_contact_phone: "Head Office Contact Number"
-      business_contact_email: "Head Office Contact Email"
-      billing_address: "Head Office Address"
-      billing_city: "Head Office City"
-      billing_zip: "Head Office Postcode"
-      billing_state: "Head Office State"
-      billing_phone: "Head Office Phone"
-      billing_fax: "Head Office Fax"
-      paymate: "Paymate"
-      direct_deposit: "Direct Deposit"
+
   user_t_edit_profile: "Edit My Profile"
   
   users:
@@ -452,3 +428,32 @@ en_AU:
     t_closed: "Closed Work Orders"
     t_workorders: "Work Orders"
     tab_menu_new: "New"
+
+
+  setting_business_name: Business Name
+  setting_business_slogan: "Business Slogan"
+  setting_business_number: "Business Number"
+  setting_business_email: "Primary Email"
+  setting_business_phone: "Phone Number"
+  setting_business_toll_free: "Toll Free Number"
+  setting_business_mobile: "Mobile Number"
+  setting_business_fax: "Fax Number"
+  setting_business_address: "Address"
+  setting_business_city: "City"
+  setting_business_state: "State"
+  setting_business_zip: "Postcode"
+  setting_enable_tax: "Enable Tax"
+  setting_tax_rate: "Tax rate %"
+  setting_tax_type: "Tax Type"
+  setting_business_contact_name: "Head Office Contact Name"
+  setting_business_contact_phone: "Head Office Contact Number"
+  setting_business_contact_email: "Head Office Contact Email"
+  setting_billing_address: "Head Office Address"
+  setting_billing_city: "Head Office City"
+  setting_billing_zip: "Head Office Postcode"
+  setting_billing_state: "Head Office State"
+  setting_billing_phone: "Head Office Phone"
+  setting_billing_fax: "Head Office Fax"
+  setting_enable_bill_to: "Enable Separate Bill To Details"
+  naviagtion:
+    users: "Users"
