PDF Designing for Work Orders print out

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -476,3 +476,4 @@ en_AU:
   setting_enable_bill_to: "Enable Separate Bill To Details"
   naviagtion:
     users: "Users"
+  setting_details: "Business Details"
