Removed prawnto from beeing a bundled gem and replaced it with the plugin. This worked better as I was able to gain access to the pdf.cell and pdf.table methods. PDF for WO is starting to take shape. Need to get exemple of the layouts better. Maybe I will jsut replicate the exisitng template for myitcrm and then as we release it, we will get some more template designs happening.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -449,6 +449,10 @@ en_AU:
     t_printing_workorder_details: "Work Order Print"
     print:
       title: "Work Order"
+    pdf:
+      t_workorder: "Work Order"
+      client: "Name :"
+      t_customer_details: "Customer Details"
   setting_business_name: Business Name
   setting_business_slogan: "Business Slogan"
   setting_business_number: "Business Number"
