Added files in prepartion to installing RedCloth. Heaps of other changes, css styling, form layouts, etc....

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -58,6 +58,7 @@ en_AU:
     apply: "Apply"
     workorder: "Create Work Order"
     print: "Print"
+    activity_log: "Activity Log"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
