RedCloth 3 is now working. No need for the gem.JS Toolbar also working. Working on the layouty the html output into PDF casuing some headaches.  Heaps of other changes, css styling, form layouts, etc....

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -59,6 +59,8 @@ en_AU:
     workorder: "Create Work Order"
     print: "Print"
     activity_log: "Activity Log"
+    exit: "Exit"
+    subject: "Subject"
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
