--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -456,6 +456,7 @@ en_AU:
       t_workorder: "Work Order"
       client: "Name :"
       t_customer_details: "Customer Details"
+    message_assigned_success: "Assigned Successfully!"
   setting_business_name: Business Name
   setting_business_slogan: "Business Slogan"
   setting_business_number: "Business Number"
