--- a/README
+++ b/README
@@ -1,9 +1,6 @@
 == Welcome to MyIT CRM Ruby On  Rails Addition ==
-This is a relatively new project which I have been coding for over 16 months
-in php and mysql but there was a bunch of code to be written. Then I looked into Ruby and
-I was very satisfied after the first use of it. Thinking how this will speed up process cycles.
 
-Anyways more to come but in the meantime check out http://myitcrm.com for more details
+Check out http://myitcrm.com for more details
 and the current version of MyIT CRM.
 
 Setup database.yml file for development
