myitcrm2-202: Fixes #202 Auto Complete Broken in Parts Module - Category Field

--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-== Welcome to MyIT CRM Ruby On  Rails Addition ==
+h1. Welcome to MyIT CRM2
 
 Check out http://myitcrm.com for more details
 and the current version of MyIT CRM.
