myitcrm2-REFS#200: Updating to Rails 3

--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-h1. Welcome to MyIT CRM2
+h1. Welcome to MyIT CRM2 - The Next Stage!
 
 Check out http://myitcrm.com for more details
 and the current version of MyIT CRM.
