Making some changes to simple form layout. Still not getting inline errors to appear

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -6,11 +6,11 @@ en_AU:
     "yes": 'Yes'
     "no": 'No'
     required:
-      text: 'required'
-      mark: '*'
+      text: 'Required Field'
+#      mark: /images/exclamation.png
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
-      # html: '<abbr title="required">*</abbr>'
+      html: '<img height="16" src="/images/exclamation.png" alt="Required Field">'
     error_notification:
       default_message: "Some errors were found, please take a look:"
     # Labels and hints examples
