--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -10,7 +10,8 @@ en_AU:
 #      mark: /images/exclamation.png
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
-      html: '<img height="16" src="/images/exclamation.png" alt="Required Field">'
+#      html: '<abbr title="Required"><img height="8" src="/images/required_symbol.png" alt="Required Field"></abbr>'
+      html: '<abbr title="Required">*</abbr>'
     error_notification:
       default_message: "Some errors were found, please take a look:"
     # Labels and hints examples
