--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -51,7 +51,7 @@ en_AU:
     submit: "Submit"
     login: "Login"
     logout: "Logout"
-    role: "Roles"
+    role: "Role"
     restricted: "You don't have permission to view this section or Your session has expired."
     active: "Active?"
     user_type: "User Type"
