Updating to use CanCan - Trying to sort out roles with permissions - Not fully working yet. Starting to get the basics down.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -440,6 +440,7 @@ en_AU:
     tab:
       user_type: "User Role"
       user_type_url: "Users_Role"
+      contact_info: "Contact Information"
   product:
     taxable: "Is Taxable?"
     new: "Create New Product"
