Updating to use CanCan and jquery Toolbar helper (TEH) - Trying to sort out roles with permissions - Not fully working yet. Starting to get the basics down.

--- a/config/locales/en_AU.yml
+++ b/config/locales/en_AU.yml
@@ -87,6 +87,7 @@ en_AU:
     activity_log: "Activity Log"
     exit: "Exit"
     subject: "Subject"
+    access_denied: "You are not authorized to perform this action.This request has been logged."
   supplier:
    t_title: "Supplier's"
    t_new: "New Supplier"
